# ml-zoomcamp

./: Makefile  pyproject.toml
src/: 01-intro.ipynb
src/homeworks/: 01-intro.ipynb  02-regression.ipynb
