[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Eveliina Hampus",email = "t2haev00@students.oamk.fi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "ml_zoomcamp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
