[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Eveliina Hampus",email = "t2haev00@students.oamk.fi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "ml_zoomcamp", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
